[gd_scene load_steps=18 format=3 uid="uid://bw7qj5m5fen6i"]

[ext_resource type="Script" uid="uid://cx40sekfxjx8w" path="res://components/tower_upgrade_item.gd" id="1_wcd6u"]
[ext_resource type="Texture2D" uid="uid://bosnkotrfix0u" path="res://sprites/arrow_tower.png" id="2_bra6i"]
[ext_resource type="Texture2D" uid="uid://bghi8x4v6tpbf" path="res://sprites/ui_cost_label.png" id="3_govks"]
[ext_resource type="Texture2D" uid="uid://cpx32kpmrfcov" path="res://sprites/num0.png" id="4_4uwd8"]
[ext_resource type="Texture2D" uid="uid://cn6nqp74duu6q" path="res://sprites/num1.png" id="5_1sniw"]
[ext_resource type="Texture2D" uid="uid://mmgdxhvjffud" path="res://sprites/num2.png" id="6_ft52x"]
[ext_resource type="Texture2D" uid="uid://binpecfwik3ji" path="res://sprites/num3.png" id="7_mccv7"]
[ext_resource type="Texture2D" uid="uid://bq4bbj7gjudud" path="res://sprites/num4.png" id="8_4pb1g"]
[ext_resource type="Texture2D" uid="uid://ctyktknbbe3jt" path="res://sprites/num5.png" id="9_4ngvk"]
[ext_resource type="Texture2D" uid="uid://bx50aqogqvvjg" path="res://sprites/num6.png" id="10_df4n0"]
[ext_resource type="Texture2D" uid="uid://88sj41v71jb" path="res://sprites/num7.png" id="11_j8xwk"]
[ext_resource type="Texture2D" uid="uid://bmler41lapjay" path="res://sprites/num8.png" id="12_i8o30"]
[ext_resource type="Texture2D" uid="uid://dkdaoi6wuh32r" path="res://sprites/num9.png" id="13_s561j"]
[ext_resource type="Texture2D" uid="uid://dgm6mxbsaplku" path="res://sprites/null_digit.png" id="14_iadm3"]
[ext_resource type="Theme" uid="uid://idi34qw0sspr" path="res://components/UpgradeItemEffectPositive.tres" id="15_govks"]
[ext_resource type="Theme" uid="uid://8wkta08t15ef" path="res://components/UpgradeItemEffectNegative.tres" id="16_4uwd8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m3sua"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_4uwd8")
}, {
"duration": 1.0,
"texture": ExtResource("5_1sniw")
}, {
"duration": 1.0,
"texture": ExtResource("6_ft52x")
}, {
"duration": 1.0,
"texture": ExtResource("7_mccv7")
}, {
"duration": 1.0,
"texture": ExtResource("8_4pb1g")
}, {
"duration": 1.0,
"texture": ExtResource("9_4ngvk")
}, {
"duration": 1.0,
"texture": ExtResource("10_df4n0")
}, {
"duration": 1.0,
"texture": ExtResource("11_j8xwk")
}, {
"duration": 1.0,
"texture": ExtResource("12_i8o30")
}, {
"duration": 1.0,
"texture": ExtResource("13_s561j")
}, {
"duration": 1.0,
"texture": ExtResource("14_iadm3")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[node name="TowerUpgradeItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wcd6u")

[node name="TowerSprite" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_bra6i")
centered = false

[node name="DisabledNoMoney" type="ColorRect" parent="TowerSprite"]
visible = false
offset_right = 515.0
offset_bottom = 500.0
color = Color(1, 1, 1, 0.882353)

[node name="Button" type="Button" parent="TowerSprite"]
offset_right = 505.0
offset_bottom = 455.0
mouse_default_cursor_shape = 2
flat = true

[node name="CostLabel" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = -26.0
offset_right = 596.0
offset_bottom = 474.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_govks")

[node name="NumericLabel" type="Control" parent="."]
anchors_preset = 0
offset_left = 187.0
offset_top = 10.0
offset_right = 227.0
offset_bottom = 50.0

[node name="digit1" type="AnimatedSprite2D" parent="NumericLabel"]
position = Vector2(12, 19)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_m3sua")

[node name="digit2" type="AnimatedSprite2D" parent="NumericLabel"]
position = Vector2(41, 19)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_m3sua")

[node name="digit3" type="AnimatedSprite2D" parent="NumericLabel"]
position = Vector2(71, 18)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_m3sua")

[node name="digit4" type="AnimatedSprite2D" parent="NumericLabel"]
position = Vector2(101, 17)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_m3sua")

[node name="UpgradeEffects" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 50.0
offset_right = 303.0
offset_bottom = 142.0
vertical = true

[node name="TestLabelPositive" type="Label" parent="UpgradeEffects"]
layout_mode = 2
theme = ExtResource("15_govks")
text = "+POSITIVE_EFFECT"

[node name="TestLabelPositive2" type="Label" parent="UpgradeEffects"]
layout_mode = 2
theme = ExtResource("15_govks")
text = "+POSITIVE_EFFECT"

[node name="TestLabelNegative" type="Label" parent="UpgradeEffects"]
layout_mode = 2
theme = ExtResource("16_4uwd8")
text = "-NEGATIVE_EFFECT"

[connection signal="pressed" from="TowerSprite/Button" to="." method="_on_button_pressed"]
